styles/style.css
html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}article,aside,footer,header,nav,section{display:block}h1{font-size:2em;margin:.67em 0}figcaption,figure,main{display:block}figure{margin:1em 40px}hr{box-sizing:content-box;height:0;overflow:visible}pre{font-family:monospace,monospace;font-size:1em}a{background-color:transparent;-webkit-text-decoration-skip:objects}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}b,strong{font-weight:inherit}b,strong{font-weight:bolder}code,kbd,samp{font-family:monospace,monospace;font-size:1em}dfn{font-style:italic}mark{background-color:#ff0;color:#000}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sub{bottom:-.25em}sup{top:-.5em}audio,video{display:inline-block}audio:not([controls]){display:none;height:0}img{border-style:none}svg:not(:root){overflow:hidden}button,input,optgroup,select,textarea{font-family:sans-serif;font-size:100%;line-height:1.15;margin:0}button,input{overflow:visible}button,select{text-transform:none}button,html [type=button],[type=reset],[type=submit]{-webkit-appearance:button}button::-moz-focus-inner,[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner{border-style:none;padding:0}button:-moz-focusring,[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring{outline:1px dotted ButtonText}fieldset{padding:.35em .75em .625em}legend{box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal}progress{display:inline-block;vertical-align:baseline}textarea{overflow:auto}[type=checkbox],[type=radio]{box-sizing:border-box;padding:0}[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto}[type=search]{-webkit-appearance:textfield;outline-offset:-2px}[type=search]::-webkit-search-cancel-button,[type=search]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}details,menu{display:block}summary{display:list-item}canvas{display:inline-block}template{display:none}[hidden]{display:none}

.clearfix:after {visibility: hidden; display: block; font-size: 0; content: ''; clear: both; height: 0; }

html { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;}

*, *:before, *:after {box-sizing: inherit}

.sr-only { position: absolute; width: 1px; height: 1px; margin: -1px; border: 0; padding: 0; white-space: nowrap; clip-path: inset(100%); clip: rect(0 0 0 0); overflow: hidden;}

/* Fonts  */

/* font-family: 'Open Sans', sans-serif;
font-family: 'Roboto', sans-serif; */

/* 
Colours
light earthen: #e29578
earth: #cb997e
deep sea: #006d77
teal: #83c5be
light light earthen: #faedcd
sea foam: #edf6f9
dark olive: #283618
light olive: #797d62;
light yellow: #fefae0
*/


/* GENERAL STYLES */

html {
    font-size: 125%;
}

body {
    font-family: 'Lato', sans-serif;
    color: rgb(67, 66, 66);
    line-height: 1.5rem;
    letter-spacing: .01rem;
    font-weight: 400;
}

.wrapper {
    width: 80%;
    max-width: 1000px;
    margin: 0 auto;
}

img {
    width: 100%;
    height: auto;
    display: block;
}

a {
    text-decoration: none;
    color: #283618;
    transition: color .5s ease-in-out;
    font-weight: 700;
    text-transform: uppercase;
}

a:hover,
a:focus {
    color: #797d62;
}


 
h2, 
h3 {
    font-weight: 700;
}

h2 {
    color: #d05846;
    font-size: 1.6rem;
    line-height: 2rem;
    margin-top: 0;
}

/* menu styles  */
nav {
    background-color: #f4f2e7;
    padding: 10px;

}
nav ul {
    display: flex;
    justify-content: center;
    padding-left: 0;
}

nav ul li {
    list-style: none;
    flex-direction: column;
}

li {
    list-style: none;
}

nav a {
    font-size: 1.5rem;
    padding: 15px 20px;
}

/* Header Styles */

.headerImage {
    width: 100vw;
    height: 25vh;
    opacity: 100%;
    background-color: #7d8e6a;
}

h1 {
    font-weight: 900;
    font-size: 5rem;
    margin-bottom: 36px;
    margin-top: 60px;
}

header {
    position: relative;
}

.headerText {
    position: absolute;
    top: 45%;
    left: 10%;
    right: 10%;
    text-align: center;
    /* color: rgb(28, 29, 33); */
    /* color: rgb(174, 2, 2); */
    color: #283618;
    /* text-shadow: 2px 2px #575757; */
    background-color: #f4f2e7ba;
    padding-bottom: 20px;
}

.headerText p {
    margin-bottom: 50px;
    margin-top: 0;
    font-size: 1.5rem;
    color: #283618;
    /* letter-spacing: .04rem; */
    font-weight: 700;
    line-height: 2rem;
}

/* Main Styles  */
main {
    background-color: #dad5c7;
}

section {
    padding: 80px 0;
}

/* .introSection {
    background-color: #fefae0;
} */

.introSection a {
    background-color: #ee6c4d;
    color: white;
    border-radius: 8px;
    padding: 15px 30px;
    line-height: 1.6rem;
}

.about {
    display: grid;
    grid-template-columns: 2fr 1fr;
    grid-column-gap: 40px;
}

.about p {
    margin-bottom: 40px;
}

/* Halal */

.halalSection,
.menuSectionImageGallery {
    background-color: #dad5c7;
}

/* .leftText {
    display: grid;
    grid-template-columns: 2fr 1fr;
    grid-column-gap: 40px;
} */


.halalSectionImageGallery,
.menuSectionImageGallery {
        display: grid;
        grid-template-columns: 1fr;
        grid-column-gap: 20px;
}

/* Contact and Location */


.contactAndLocation {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-column-gap: 40px;
}

.storeLocation a {
    display: flex;
}

.location p {
    margin-top: 0;
}

.fa-store-alt {
    display: block;
    margin-right: 8px;
    padding-top: 6px;
}

.telephone {
    font-weight: 700;
    color: #ee6c4d;
    
}

.hours,
.location,
.aboutText,
.menu,
.halalImage {
    background-color: #f4f2e7;
    padding: 40px;
}


/* Footer Styles */

.copyright {
    background-color: #283618;
    text-align: center;
    color: #ffe8d6;
    padding: 20px;
    margin: 0;
}


/* GALLERY STYLES */


.galleryImages {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    gap: 20px;
}

/* MENU STYLES */

.menuSectionImageGallery {
    padding: 40px 0;
}

.liBackground {
    background-color:#e3e4d3;
    padding-bottom: 20px;
    margin-top: 15px;
}

.menuSection ul {
    padding-left: 0;
}

.menuSection li {
    position: relative;
    left: 5%;
    padding-left: 38px;
    padding-right: 48px;
    font-family: 'Lato', sans-serif;
    font-weight: 700;
    line-height: 1.4rem;
    font-size: 1rem;
}

.menuSection li p {
margin: 0 0 15px 20px;
color: rgb(126, 125, 125);
}


.menuSection li span {
    color: #b36a5e;
    display: block;
    position: absolute;
right: 10%;
top: 0;
}


.menuTitle p {
    color: #797d62;
    margin-top: 6px;
    font-weight: 700;
    line-height: 1.3rem;
    font-size: 1rem;
}

.menuTitle p span {
 color: #b36a5e;
}
.menuSection li .number {
    color: #b36a5e;
    display: block;
    position: absolute;
    left: 0;
    top: 0;
}

.invisible {
    opacity: 0;
}

.menuSection .noSpace li {
    padding-left: 0;
    padding-right: 0;
}

.menuSection .noSpace .red {
    color: #b36a5e;
}



.menuTitle h2 {
    margin-bottom: 6px;
    margin-top: 40px;
}

.menuSection .image {
    margin: 30px auto;
    margin-bottom: 0;
}

@media (max-width: 940px) {
    body {
        font-size: .8rem;
        line-height: 1.2rem;
    }

    .headerText p {
        font-size: 1.2rem;
        line-height: 1.8rem;
    }

    h2 {
        font-size: 1.3rem;
        line-height: 1.8rem;
    }

    h1 {
        font-size: 2.3rem;
    }

    nav a {
        font-size: 1rem;
    }

    .menuTitle p {
        line-height: 1.1rem;
    }

    .wrapper {
        width: 90%;
        max-width: 850px;
        margin: 0 auto;
        padding: 35px;
    }

    .headerText {
        right: 0;
        left: 0;
    }

.menuSection li {
    padding-left: 30px;
    font-weight: 700;
    line-height: 1.1rem;
    font-size: .8rem;
    }

}

@media (max-width: 795px) {

    .contactAndLocation,
    .about,
    .leftText {
        grid-template-columns: 1fr;
        gap: 20px;
    }

    .aboutImage {
        transform: rotate(90deg);
        width: 60%;
        margin: 0 auto;
    }

    .about {
        margin-top: 0;
        padding-top: 0;
    }


    h2 {
        font-size: 1.3rem;
        line-height: 1.3rem;
    }

    h1 {
        font-size: 1.6rem;
        margin-top: 20px;
        margin-bottom: 12px;
    }
    
    
    .headerText p {
        margin-bottom: 20px;
        font-size: 1rem;
        line-height: 1.2rem;
    }


    .halalImage img {
        margin: 40px auto;
    }

    .halalSectionImageGallery,
    .menuSectionImageGallery {
            display: grid;
            grid-template-columns: 1fr;
            gap: 20px;
            margin-top: 40px;
    }
    .wrapper {
        width: 100%;
    }

    .wrapper.menu {
        padding: 10px;
    }
}

